--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <!--
@@ -14,7 +13,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href="$FLUTTER_BASE_HREF">
+    <base href="/">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -37,12 +36,24 @@
     var serviceWorkerVersion = null;
 
 
+
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script defer src="flutter.js"></script>
 </head>
 <body>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDDC-2IZHc3NCXp1lQtOauQMyZ-1Wz5RrE",
+      authDomain: "flutter-crush-4ece9.firebaseapp.com",
+      projectId: "flutter-crush-4ece9",
+      storageBucket: "flutter-crush-4ece9.appspot.com",
+      messagingSenderId: "287711278777",
+      appId: "1:287711278777:web:07e4db55dcb6ef0be44d68",
+      measurementId: "G-0ZT7HMRWNX"
+    };
+    firebase.initializeApp(firebaseConfig);
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -56,6 +67,7 @@
         }
       });
     });
+
 
 
 </script>
