added Notification for web

--- a/web/index.html
+++ b/web/index.html
@@ -67,9 +67,13 @@
         }
       });
     });
-
-
-
+</script>
+<script>
+    if("serviceWorker" in navigator){
+        window.addEventListener("load", function() {
+            navigator.serviceWorker.register("/firebase-messaging-sw.js");
+        });
+    }
 </script>
 </body>
 </html>
