--- a/web/index.html
+++ b/web/index.html
@@ -22,13 +22,13 @@
     <!-- iOS meta tags & icons -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <meta content="projekt_flutter_crush" name="apple-mobile-web-app-title">
+    <meta content="Master Thesis Flutter Crush" name="apple-mobile-web-app-title">
     <link href="icons/Icon-192.png" rel="apple-touch-icon">
 
     <!-- Favicon -->
     <link href="favicon.png" rel="icon" type="image/png"/>
 
-    <title>projekt_flutter_crush</title>
+    <title>Flutter Crush</title>
     <link href="manifest.json" rel="manifest">
 
     <script>
