--- a/web/index.html
+++ b/web/index.html
@@ -38,17 +38,13 @@
 
     </script>
     <!-- This script adds the flutter initialization JS code -->
-    <script defer src="flutter.js"></script>
+    <script src="flutter.js" defer></script>
 </head>
 <body>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
