--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
 
 
 
+
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
@@ -46,6 +47,7 @@
     });
 
 
+
 </script>
 <script>
        if ('serviceWorker' in navigator) {
@@ -53,6 +55,40 @@
             navigator.serviceWorker.register('/firebase-messaging-sw.js');
           });
       }
+
+
+</script>
+<script>
+    let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  // Prevent the mini-infobar from appearing on mobile
+  e.preventDefault();
+  // Save the event so it can be triggered later.
+  deferredPrompt = e;
+  // Update UI notify the user they can install the PWA
+  showInstallPromotion();
+});
+
+buttonInstall.addEventListener('click', (e) => {
+  // Hide the app provided install promotion
+  hideInstallPromotion();
+  // Show the install prompt
+  deferredPrompt.prompt();
+  // Wait for the user to respond to the prompt
+  deferredPrompt.userChoice.then((choiceResult) => {
+    if (choiceResult.outcome === 'accepted') {
+      console.log('User accepted the install prompt');
+    } else {
+      console.log('User dismissed the install prompt');
+    }
+    deferredPrompt = null;
+  });
+});
+
+window.addEventListener('appinstalled', (evt) => {
+  console.log('a2hs installed');
+});
 
 </script>
 </body>
