Added before unload; Fixed dark patterns not correctly loading

--- a/web/index.html
+++ b/web/index.html
@@ -58,5 +58,17 @@
 
 
 </script>
+<script>
+  function setupBeforeUnloadListener() {
+    window.addEventListener("beforeunload", (event) => {
+      event.preventDefault();
+      handleBeforeUnload(); // This will call the Dart function
+      return null;
+    });
+  }
+</script>
+
+
+
 </body>
 </html>
