--- a/web/UnityLibrary/index.html
+++ b/web/UnityLibrary/index.html
@@ -90,9 +90,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/UnityLibrary.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityLibrary.data",
-        frameworkUrl: buildUrl + "/UnityLibrary.framework.js",
-        codeUrl: buildUrl + "/UnityLibrary.wasm",
+        dataUrl: buildUrl + "/UnityLibrary.data.unityweb",
+        frameworkUrl: buildUrl + "/UnityLibrary.framework.js.unityweb",
+        codeUrl: buildUrl + "/UnityLibrary.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "daltonlima.com",
         productName: "Match3",
