--- a/web/UnityLibrary/index.html
+++ b/web/UnityLibrary/index.html
@@ -90,9 +90,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/UnityLibrary.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityLibrary.data.unityweb",
-        frameworkUrl: buildUrl + "/UnityLibrary.framework.js.unityweb",
-        codeUrl: buildUrl + "/UnityLibrary.wasm.unityweb",
+        dataUrl: buildUrl + "/a4067c6e010b5e2cdff8530988fb4b03.data.unityweb",
+        frameworkUrl: buildUrl + "/3690ed0e1a6de62a8aa8bc00a4daacb6.js.unityweb",
+        codeUrl: buildUrl + "/5a38ecad8b2eb6b57a9c1b1fe3570c27.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "daltonlima.com",
         productName: "Match3",
