--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,6 @@
          background-color: #FFFFFF; /* White background */
          color: #000000; /* Black text color */
          }
-
-
     </style>
     <!-- Favicon -->
     <link href="favicon.png" rel="icon" type="image/png">
@@ -27,13 +25,7 @@
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer=""></script>
-  
-  
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-  
-  
-  
-  
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   
   <style id="splash-screen-style">
@@ -101,6 +93,7 @@
       document.body.style.background = "transparent";
     }
   </script>
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
   <picture id="splash">
@@ -108,8 +101,6 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
-  
-  
   
 <script>
          window.addEventListener('load', function(ev) {
@@ -125,9 +116,6 @@
              }
            });
          });
-
-
-
 </script>
 <script>
          if ('serviceWorker' in navigator) {
@@ -136,9 +124,6 @@
               var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
             });
          }
-
-
-
 </script>
 <script>
          function clearCookies() {
@@ -150,11 +135,6 @@
              document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
          }
          }
-
-
-
-
-
 </script>
 <script>
          function setupBeforeUnloadListener() {
@@ -164,11 +144,6 @@
              return null;
            });
          }
-
-
-
-
-
 </script>
 <script>
     let deferredPrompt;
